--- a/Adra-accueil.html
+++ b/Adra-accueil.html
@@ -8,7 +8,39 @@
         <title>Adra Chili</title>
     </head>
     <body>
+      <header>
+          <nav class="navbar">
+            <a class="logo" href="Adra-accueil.html"><img src="images/logo-adra.png" style="width: 50px;"/></a>
+            <div class="nav-links">
 
+              <ul>
+                <li><a class="nav-link active" aria-current="page" href="Adra-accueil.html">Accueil</a></li>
+                <li><a class="nav-link" href="Adra-accueil.html">Evénements</a></li>
+                <li><a class="nav-link" href="Adra-accueil.html">Adra Chili</a></li>
+                <li><a class="nav-link" href="Adra-accueil.html">Donations</a></li>
+              </ul>
+            </div>
+            <button alt="Menu" type="button" class="menu" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle navigation">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewbox="0 0 16 16">
+              <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+              </svg>
+            </button>
+          </nav>
+      </header>
+      <script>
+        const menu = document.querySelector(".menu")
+        const navLinks = document.querySelector(".nav-links")
 
+        menu.addEventListener('click',()=>{
+          navLinks.classList.toggle('mobile-menu')
+        })
+      </script>
+      <main>
+
+      </main>
+      <footer>
+
+      </footer>
     </body>
     </html>
